1. Projections do not include duplicate axes choices (sql query call fixed, the db still contains duplicates). 2. OpenCytoVisualization reworked so that if OpenCytoPreprocessing is not present, Population and Projection combos are not available. 3. Added extra padding to the labels of Population, Projection, X and Y Axis combos. 4. Changed the files combo box to be in the footer of the study variables panel, instead of in the footer of the grid panel, thus removing the issue with the grid panel's footbar not resizing.

--- a/src/web/OpenCytoVisualization.css
+++ b/src/web/OpenCytoVisualization.css
@@ -2,7 +2,7 @@
 
 /* Error code from R */
 pre {
-    text-align: center;
+    /*text-align: center;*/
 }
 
 /* Class specs */
@@ -49,6 +49,10 @@ pre {
 
 ul.x-tab-strip-top {
     padding-top: 0px;
+}
+
+.x-box-inner {
+    margin-top: 2px;
 }
 
 /* Buttons */
